--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="project.cmpt276.virdee.balraj.walkingschoolbus">
+    package="project.cmpt276.androidui.walkingschoolbus">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -14,9 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login" />
-        <activity android:name=".signUp" />
-        <activity android:name=".mainMenu"></activity>
+        <activity android:name="project.cmpt276.androidui.walkingschoolbus.Login" />
+        <activity android:name="project.cmpt276.androidui.walkingschoolbus.signUp" />
+        <activity android:name="project.cmpt276.androidui.walkingschoolbus.mainMenu"></activity>
     </application>
 
 </manifest>
