Added delete user server call

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <meta-data
         android:name="com.google.android.geo.API_KEY"
         android:value="AIzaSyDkdFsxTGliprgz0eQCNbLDvRtbIfUa9hQ"/>
+        <activity
+            android:name=".mainMenu"
+        />
 
         <activity
         android:name=".MapsActivity"
