Commit - added who i monitor activity where: - User can remove anyone from the list of users whom they monitor, and who monitors them. - User can add another user to the set of users they monitor (add their child).     The child account must already exist and is identified by its email address.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,8 +44,10 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/app_name"></activity>
-        <activity android:name=".mainMenu"></activity>
+            android:label="@string/app_name" />
+        <activity android:name=".mainMenu" />
+        <activity android:name=".WhoIMonitor" />
+        <activity android:name=".WhoMonitorsMe"></activity>
     </application>
 
 </manifest>
