Commit -Manage Group Activity -Currently shows groups that user is a member of

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
             android:label="@string/app_name" />
         <activity android:name=".mainMenu" />
         <activity android:name=".WhoIMonitor" />
-        <activity android:name=".WhoMonitorsMe"></activity>
+        <activity android:name=".WhoMonitorsMe" />
+        <activity android:name=".ManageGroups"></activity>
     </application>
 
 </manifest>
