--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
             android:label="@string/app_name" />
         <activity android:name=".mainMenu" />
         <activity android:name=".WhoIMonitor" />
-        <activity android:name=".WhoMonitorsMe"></activity>
+        <activity android:name=".WhoMonitorsMe" />
+        <activity android:name=".AddMonitoredUsersToGroup"></activity>
     </application>
 
 </manifest>
