Commit -Manage Group Activity      -shows groups that user is a member of and can remove userself from a group -Remove users who you monitor from groups      -implemented in who i monitor

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,8 +49,9 @@
         <activity android:name=".mainMenu" />
         <activity android:name=".WhoIMonitor" />
         <activity android:name=".WhoMonitorsMe" />
-        <activity android:name=".ManageGroups"/>
-        <activity android:name=".AddMonitoredUsersToGroup"></activity>
+        <activity android:name=".ManageGroups" />
+        <activity android:name=".AddMonitoredUsersToGroup" />
+        <activity android:name=".monitoredUserGroupsActivity"></activity>
     </application>
 
 </manifest>
