--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,8 @@
         <activity android:name=".monitoredUserGroupsActivity" />
         <activity android:name=".MessagingActivity" />
         <activity android:name=".OldMessagesActivity" />
-        <activity android:name=".SendingMessageActivity"></activity>
+        <activity android:name=".SendingMessageActivity"
+            android:windowSoftInputMode="adjustPan"></activity>
     </application>
 
 </manifest>
