--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,8 +54,11 @@
         <activity android:name=".monitoredUserGroupsActivity" />
         <activity android:name=".MessagingActivity" />
         <activity android:name=".OldMessagesActivity" />
-        <activity android:name=".SendingMessageActivity"
-            android:windowSoftInputMode="adjustPan"></activity>
+        <activity
+            android:name=".SendingMessageActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".SendUserMessageActivity"
+                  android:windowSoftInputMode="adjustPan" ></activity>
     </application>
 
 </manifest>
