--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,22 +50,22 @@
         <activity android:name=".ParentsDashboardActivity" />
         <activity android:name=".WhoMonitorsMe" />
         <activity android:name=".ManageGroups" />
-        <activity android:name=".AddMonitoredUsersToGroup" />
         <activity android:name=".monitoredUserGroupsActivity" />
         <activity
             android:name=".ParentDashUserInfoActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".ParentDashMessagingActivity"></activity>
-        <activity android:name=".monitoredUserGroupsActivity" />
+        <activity android:name=".ParentDashMessagingActivity" />
         <activity android:name=".MessagingActivity" />
-        <activity android:name=".ParentDashMessagingActivity"/>
-                <activity android:name=".MessagingActivity" />
         <activity android:name=".OldMessagesActivity" />
         <activity
             android:name=".SendingMessageActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".SendUserMessageActivity"
-                  android:windowSoftInputMode="adjustPan" ></activity>
+        <activity
+            android:name=".SendUserMessageActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".ParentMapsActivity"
+            android:label="@string/title_activity_parent_maps"></activity>
     </application>
 
 </manifest>
