--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,15 +52,17 @@
         <activity android:name=".ManageGroups" />
         <activity android:name=".AddMonitoredUsersToGroup" />
         <activity android:name=".monitoredUserGroupsActivity" />
-        <activity android:name=".signUpOptionalInfo"></activity>
+        <activity android:name=".signUpOptionalInfo" />
         <activity android:name=".monitoredUserGroupsActivity" />
         <activity android:name=".MessagingActivity" />
         <activity android:name=".OldMessagesActivity" />
         <activity
             android:name=".SendingMessageActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".SendUserMessageActivity"
-                  android:windowSoftInputMode="adjustPan" ></activity>
+        <activity
+            android:name=".SendUserMessageActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".editUserInfo"></activity>
     </application>
 
 </manifest>
