--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,8 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ParentMapsActivity"
-            android:label="@string/title_activity_parent_maps"></activity>
+            android:label="@string/title_activity_parent_maps" />
+        <activity android:name=".GroupsLeaderActivity"></activity>
     </application>
 
 </manifest>
