parent can edit child info, changes are not saved on the server. CONSTRAINTS ALL WRONG

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,13 +65,14 @@
         <activity
             android:name=".SendUserMessageActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".editUserInfo"></activity>
+        <activity android:name=".editUserInfo" />
         <activity
             android:name=".SendUserMessageActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ParentMapsActivity"
-            android:label="@string/title_activity_parent_maps"></activity>
+            android:label="@string/title_activity_parent_maps" />
+        <activity android:name=".editChildInfo"></activity>
     </application>
 
 </manifest>
