Added Gameification Rewards Page
- Currently limited to 20 buttons (rewards display) that fit on the screen without stretching the image.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,8 +68,9 @@
         <activity
             android:name=".ParentMapsActivity"
             android:label="@string/title_activity_parent_maps" />
-        <activity android:name=".editChildInfo"/>
-        <activity android:name=".GroupsLeaderActivity"></activity>
+        <activity android:name=".editChildInfo" />
+        <activity android:name=".GroupsLeaderActivity" />
+        <activity android:name=".PointsStore"></activity>
     </application>
 
 </manifest>
