--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,8 @@
             android:label="@string/title_activity_parent_maps" />
         <activity android:name=".editChildInfo" />
         <activity android:name=".GroupsLeaderActivity" />
-        <activity android:name=".PointsStore"></activity>
+        <activity android:name=".PointsStore" />
+        <activity android:name=".LeaderBoardActivity"></activity>
     </application>
 
 </manifest>
