Added reward purchase confirmation and setting current avatar.
 - Clicking on a reward in the shop will pull up a confirmation page (currently displays a fixed name and price).
 - Long press in the store will set the selected avatar as the current one to display on main menu.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
             android:label="@string/title_activity_parent_maps" />
         <activity android:name=".editChildInfo" />
         <activity android:name=".GroupsLeaderActivity" />
-        <activity android:name=".PointsStore"></activity>
+        <activity android:name=".PointsStore" />
     </application>
 
 </manifest>
