--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,8 +71,7 @@
         <activity android:name=".editChildInfo" />
         <activity android:name=".GroupsLeaderActivity" />
         <activity android:name=".PointsStore" />
-        <activity android:name=".LeaderBoardActivity"></activity>
-        <activity android:name=".PointsStore" />
+        <activity android:name=".LeaderBoardActivity"/>
     </application>
 
 </manifest>
