--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,9 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/app_name" />
-        <activity android:name=".mainMenu" />
+        <activity android:name=".mainMenu"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            />
         <activity android:name=".ParentsDashboardActivity" />
         <activity android:name=".WhoMonitorsMe" />
         <activity android:name=".ManageGroups" />
