--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,37 +45,58 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"/>
+
         <activity android:name=".mainMenu"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            />
-        <activity android:name=".ParentsDashboardActivity" />
-        <activity android:name=".WhoMonitorsMe" />
-        <activity android:name=".ManageGroups" />
-        <activity android:name=".monitoredUserGroupsActivity" />
-        <activity android:name=".signUpOptionalInfo" />
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ParentsDashboardActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".WhoMonitorsMe"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ManageGroups"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".monitoredUserGroupsActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".signUpOptionalInfo"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ParentDashUserInfoActivity"
-            android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".ParentDashMessagingActivity" />
-        <activity android:name=".MessagingActivity" />
-        <activity android:name=".OldMessagesActivity" />
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ParentDashMessagingActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MessagingActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".OldMessagesActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SendingMessageActivity"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SendUserMessageActivity"
-            android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".editUserInfo" />
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".editUserInfo"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ParentMapsActivity"
-            android:label="@string/title_activity_parent_maps" />
-        <activity android:name=".editChildInfo" />
-        <activity android:name=".GroupsLeaderActivity" />
-        <activity android:name=".PointsStore" />
-        <activity android:name=".LeaderBoardActivity"/>
-        <activity android:name=".PreviousPermissions"/>
-        <activity android:name=".Permissions"></activity>
+            android:label="@string/title_activity_parent_maps"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".editChildInfo"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".GroupsLeaderActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".PointsStore"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".LeaderBoardActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".PreviousPermissions"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Permissions"
+            android:screenOrientation="portrait"></activity>
 
     </application>
 
